<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/update_record_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="View Record" />

    <!-- patient list here   -->

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="622dp"
        android:gravity="center"
        android:text="@string/view_patient_record"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="326dp"
        android:layout_marginBottom="549dp"
        android:text="@string/email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="496dp"
        android:text="@string/full_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="440dp"
        android:text="@string/address"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phonenum"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="381dp"
        android:text="@string/phone_no"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="307dp"
        android:text="@string/age"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="249dp"
        android:text="@string/course"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/idnumber"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="523dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="174dp"
        android:text="@string/id_number"
        android:textSize="18sp" />

</RelativeLayout>