<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/update_record_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:backgroundTint="@color/green"
        app:title="Update Record" />

    <!-- patient list here   -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/update_record_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/kindly_provide_your_patient_personal_details"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="5sp"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="5sp"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="5sp">

                <TextView
                    android:id="@+id/errorAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="Address is Blank"
                    android:textColor="#FF0000"
                    android:textSize="13sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:hint="@string/address"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="5sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_contactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:hint="@string/phone_no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/errorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="Phone Number is Blank"
                    android:textColor="#FF0000"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="5sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_Age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:hint="@string/age"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/errorAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="Age is Blank"
                    android:textColor="#FF0000"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/courseInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="5sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:hint="@string/course"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/errorCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="Course is Blank"
                    android:textColor="#FF0000"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idNumberInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="5sp"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:hint="@string/id_number"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/noteForButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:text="click UPDATE Personal Info and go to Medical History"
                android:textSize="13sp" />

            <Button
                android:id="@+id/nxtButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="34dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="72dp"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:text="Update" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="90dp" />
        </LinearLayout>
    </ScrollView>

    <!-- EMAIL   -->
    <!-- EMAIL   -->
    <!-- ADDRESS   -->
    <!-- PHONE   -->
    <!-- AGE   -->
    <!-- COURSE   -->
    <!-- ID Number   -->

</RelativeLayout>